# jadman

.github/workflows/: build-release.yml
crates/jadm-common/: Cargo.toml
crates/jadm-common/src/: protocol.rs  types.rs
crates/jadm-daemon/: Cargo.toml
crates/jadm-daemon/migrations/: 20260703000000_add_write_description.sql
crates/jadm-daemon/src/: desktop.rs  main.rs  native_messaging.rs
crates/jadm-daemon/src/clipboard/: monitor.rs
crates/jadm-daemon/src/db/: queries.rs
crates/jadm-daemon/src/proxy/: network.rs  trust.rs
crates/jadm-daemon/src/queue/: manager.rs  tests.rs
crates/jadm-daemon/src/rpc/: socks.rs  unix.rs
crates/jadm-daemon/src/ytdlp/: runner.rs
crates/jadm-tui/: Cargo.toml
crates/jadm-tui/src/input/: handler.rs
crates/jadm-tui/src/ui/: layout.rs
docs/: manual.md
extension/chrome/: background.js  content.js  grabber.html  grabber.js  popup.html  popup.js  siphon_hook.js  toolbox.html  toolbox.js
extension/firefox/: background.js  content.js  grabber.html  grabber.js  menu.js  popup.html  popup.js  toolbox.html  toolbox.js
packaging/aur/jadman-bin/: .SRCINFO  PKGBUILD  jadman-bin-debug-0.1.0-1-x86_64.pkg.tar.zst
packaging/aur/jadman-bin/pkg/jadman-bin/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/jadman-bin/pkg/jadman-bin-debug/: .BUILDINFO  .MTREE  .PKGINFO
packaging/aur/jadman-bin/src/: jadm-tui
website/: index.html  script.js  style.css
