[package]
name = "jadm-daemon"
version = "0.1.2"
edition = "2024"

[dependencies]
jadm-common = { path = "../jadm-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true, features = ["default", "rustls-tls"] }
axum = { workspace = true, features = ["multipart"] }
tower-http = { workspace = true }
tokio-stream = { workspace = true }
notify-rust = { workspace = true }
which = { workspace = true }
arboard = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
async-trait = { workspace = true }
directories = { workspace = true }
tempfile = { workspace = true }
socket2 = { workspace = true }
bytes = { workspace = true }
shlex = "2.0.1"
rcgen = "0.14.8"
rustls = "0.23.40"
tokio-rustls = "0.26.4"
hyper = "1.10.1"
hyper-util = "0.1.20"
http-body-util = "0.1.3"
tower-service = "0.3.3"
tower = "0.5.3"

[features]
default = []
cdm = []

[dev-dependencies]
mockall = { workspace = true }

[package.metadata.deb]
name = "jadm-daemon"
maintainer = "snowfox-rubait <266122632+snowfox-rubait@users.noreply.github.com>"
copyright = "2026, snowfox-rubait"
extended-description = "JADMan daemon handles download siphoning, SOCKS5 proxying, yt-dlp/aria2 integration, and Unix sockets RPC."
depends = "libssl3, aria2, yt-dlp, ffmpeg"
section = "net"
priority = "optional"
assets = [
    ["target/release/jadm-daemon", "usr/bin/jadm-daemon", "755"],
]

